fix(cards): adjust Teacher Dashboard spacing in hero

--- a/css/cards.css/cards.css
+++ b/css/cards.css/cards.css
@@ -46,8 +46,8 @@ display: block;
 
     position: absolute;
 
-    top: 480px;
-    right: 230;
+    top: 450px;
+    right: 240;
     left: auto;
 
     width: 210px;
